[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]

[node name="playscreen" type="Node"]
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 502, 342 )

[node name="player_AnimatedSprite" parent="YSort/player" index="0"]
frame = 3

[node name="CurrentHealth" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -382.0
margin_top = 20.0
margin_right = -314.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.101961, 0.937255, 0.0745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "$"
align = 1
valign = 1

[node name="HealButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -159.0
margin_top = 16.0
margin_right = -19.0
margin_bottom = 82.0

[node name="KillMoneyz" type="Label" parent="."]
margin_left = 791.0
margin_top = 10.0
margin_right = 902.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 3 )
align = 1
valign = 1

[node name="TotalKillz" type="Label" parent="."]
margin_left = 23.0
margin_top = 25.0
margin_right = 63.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="goldz" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 29.0
margin_right = -48.0
margin_bottom = 43.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.956863, 0.792157, 0.0352941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="player_health" from="YSort/player" to="." method="_on_player_player_health"]
[connection signal="body_entered" from="YSort/player/gold_grab" to="." method="_on_gold_grab_body_entered"]
[connection signal="pressed" from="HealButton" to="." method="_on_HealButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="YSort/player"]
